# postcard-infomem

./: Cargo.toml  build.rs
device/: Cargo.toml
device/src/: lib.rs
examples/: Cargo.toml  avr-atmega328p.json  build.rs  runners.just
examples/.cargo/: config.toml
examples/memory/: msp430g2553.x  rp2040-hal.x  windows.x
examples/src/: hal.rs  main.rs  osal.rs  prelude.rs
host/: Cargo.toml
host/src/: ldscript.rs  lib.rs
src/: infostr.rs  lib.rs  magic.rs  seq.rs  shim.rs
