[package]
name = "postcard-infomem"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.2", default-features = false }
rustc_version = { version = "0.4.0", optional = true }
semver = { version = "~1.0.16", optional = true, default-features = false, features = [ "serde" ] }
serde = { version = "1.0.152", default-features = false, features = [ "derive" ] }
time = { version = "~0.3.17", default-features = false, features = [ "serde" ] }

[dev-dependencies]
postcard = { version = "1.0.2", default-features = false, features = [ "alloc" ] }

[features]
std = ["alloc", "postcard/use-std", "dep:rustc_version"]
alloc = ["postcard/alloc", "dep:semver"]

[workspace]
members = [ "device", "examples", "host" ]
