[package]
name = "postcard-infomem-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
postcard = { version = "1.0.2", default-features = false, features = [ "alloc" ] }
postcard-infomem = { version = "0.1.0", path = "..", default-features = false, features = [ "alloc" ] }
