[package]
name = "postcard-infomem-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "=2.0.0-rc.1"
postcard = { version = "1.0.2", default-features = false, features = [ "use-std" ] }
postcard-infomem = { version = "0.1.0", path = "..", features = [ "std" ] }
rustc_version = "0.4.0"
semver = { version = "1.0.16", default-features = false }
time = { version = "0.3.17", default-features = false, features = [ "local-offset" ] }
